Update app, process, proses

--- a/templates/proses.html
+++ b/templates/proses.html
@@ -16,9 +16,15 @@
                     <div class="column" >
                         <div class="form-check form-check-inline"> 
                             <select name="select_thresholding" id="selected_thresholding">
-                                <option value='otsu' name="mode">                             Otsu Thresholding       </option>
-                                <option value='niblack' name="mode">                          Niblack Thresholding    </option>
-                                <option value='sauvola' name="mode">                          Sauvola Thresholding    </option>
+                                <option value='otsu' name="mode">                             Otsu Thresholding             </option>
+                                <option value='niblack' name="mode">                          Niblack Thresholding          </option>
+                                <option value='sauvola' name="mode">                          Sauvola Thresholding          </option>
+                                <option value='simp' name="mode">                             Simple Thresholding           </option>
+                                <option value='mean' name="mode">                             Mean Adaptive Thresholding    </option>
+                                <option value='gaus' name="mode">                             Gaussian Adaptive Thresholding </option>
+                                <option value='wid' name="mode">                              Wide Edge Map                 </option>
+                                <option value='mid' name="mode">                              Mid Edge Map                  </option>
+                                <option value='tight' name="mode">                            Tight Edge Map                </option>
                             </select>
                         </div>   
                     </div>
